test/files/neg/t6446-show-phases.scala
// scalac: -Xshow-phases

// testing compiler flag output only
object Test extends App
